@@ -11,7 +11,7 @@
 #
 # It's strongly recommended to check this file into your version control system.
 
-ActiveRecord::Schema.define(:version => 20120510120155) do
+ActiveRecord::Schema.define(:version => 20120911150032) do
 
   create_table "audits", :force => true do |t|
     t.integer  "auditable_id"
@@ -70,11 +70,6 @@ ActiveRecord::Schema.define(:version => 20120510120155) do
     t.text     "full_gloss"
     t.string   "sort_key",           :limit => 16
     t.text     "foreign_ids"
-    t.boolean  "conjecture"
-    t.boolean  "unclear"
-    t.boolean  "reconstructed"
-    t.boolean  "nonexistant"
-    t.boolean  "inflected"
     t.string   "language_tag",       :limit => 3,  :default => "", :null => false
     t.string   "part_of_speech_tag", :limit => 2,  :default => "", :null => false
   end
